# Prefect

./: .gitignore  README.md  commands.json  pyproject.toml  run_prefect.sh  run_prefect_gui.sh
.github/: copilot-instructions.md
scripts/: run_prefect.sh  run_prefect_gui.sh
src/prefect/: bedrock_updater.py  command_catalog.py  config.py  conversation_history.py  ollama_client.py  persona.py  player_events.py
src/prefect/discovery/: __init__.py  bootstrap.py  discoverer.py  parser.py  registry.py
src/prefect/mcp/: command_tools.py  server.py  tools.py
src/prefect/safety/: __init__.py  allowlist.py  sanitizer.py
src/prefect/server_control/: __init__.py  command_runner.py  controller.py  probes.py  process_manager.py
src/prefect/ui/: qt_gui.py
src/prefect/watchers/: __init__.py  log_tail.py
tests/: __init__.py  conftest.py  test_allowlist.py  test_bedrock_process_manager.py  test_command_catalog.py  test_command_runner.py  test_command_tools.py  test_config.py  test_conversation_history.py  test_discovery_bootstrap.py  test_discovery_discoverer.py  test_discovery_parser.py  test_discovery_registry.py  test_log_tail.py  test_persona.py  test_player_events.py  test_probes.py  test_process_manager.py  test_sanitizer.py  test_tools.py
