[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "prefect-necesse"
version = "0.1.0"
description = "Prefect: server-side AI steward for a Necesse dedicated server"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Proprietary" }
authors = [
  { name = "kellogg" }
]
dependencies = [
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "mcp>=1.2.0",
]

[project.scripts]
prefect-mcp = "prefect.mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/prefect"]

[tool.pytest.ini_options]
testpaths = ["tests"]
